--- a/styles/globals.css
+++ b/styles/globals.css
@@ -884,6 +884,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     z-index: -1;
 }
 
+.home-banner .bg-cover,
 .home-intro .bg-cover {
     width: 100%;
     height: 100%;
@@ -891,11 +892,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     top: 0;
 }
 
+.home-banner .bg-cover img,
 .home-intro .bg-cover img {
     display: block;
     pointer-events: none;
 }
 
+.home-banner .bg-cover img,
 .home-intro .bg-cover img, .wrap-project-home img {
     position: absolute;
     width: 100%;
@@ -945,10 +948,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
 }
 
 .text-title-about{
-    font-size: 6rem;
-    font-weight: 100;
+    font-size: 4rem;
+    font-weight: 200;
     color: inherit;
     line-height: 1;
+    text-transform: uppercase;
 }
 
 .box-txt, .box-txt p {
@@ -1291,6 +1295,107 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
 }
 
 /* Home Page New End */
+
+/* Home Page Category */
+
+.collection-box{
+    position: relative;
+    width: calc(33.3333% - 1px);
+    margin: 0;
+    cursor: pointer;
+}
+
+.pic-collection {
+    width: 100%;
+    height: max(45vh, 33vw);
+    overflow: hidden;
+}
+
+img.trans-y {
+    height: 120%;
+    top: -10%;
+    transition: 0s !important;
+}
+
+.home-commercial .pic-img img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    object-position: center center;
+    pointer-events: none;
+}
+
+.inside-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 0;
+    z-index: 2;
+}
+
+.collection-box::after, .inside-text {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
+.inside-text h2 {
+    font-size: 4rem;
+    font-weight: 100;
+    color: var(--color-white);
+    text-transform: uppercase;
+}
+
+.collection-box::after {
+    content: '';
+    background: var(--bg-gradient);
+    transition: transform .3s ease-in-out;
+    height: 100%;
+    z-index: 1;
+}
+
+.collection-box::after, .inside-text {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
+/* Home Page Category End */
+
+
+/* Home Page Partner */
+
+.home-partner .wrap-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 0;
+    width: var(--wrapcontent);
+    margin: auto;
+    padding: 5vw 0;
+}
+
+.wrap-content, .wrap-large, .wrap-small{
+    position: relative;
+    height: auto;
+    z-index: 5;
+}
+
+.home-partner .left-content{
+    width: 25%;
+}
+
+.home-partner .right-content{
+    width: 64%;
+}
+
+/* Home Page Partner End */
 
 /* News */
 
@@ -2309,4 +2414,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
             font-size: 15px;
         }
     }
+}
+
+.swiper-free-mode > .swiper-wrapper {
+    -webkit-transition-timing-function: linear;
+    -o-transition-timing-function: linear;
+    transition-timing-function: linear;
+    margin: 0 auto;
 }
