--- a/styles/globals.css
+++ b/styles/globals.css
@@ -603,6 +603,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     border-bottom: 1px solid var(--bgactive50);
 }
 
+.form-row-search .input-text input[type=text]:focus {
+    color: var(--color-black);
+    background: var(--color-white);
+    border-bottom: 0;
+    border-radius: 15px;
+}
+
 .close-search {
     background: url(../public/close_search.svg) no-repeat center center / contain;
 }
@@ -2174,6 +2181,10 @@ img.trans-y {
 
     .item-news-home:hover, .social ul:hover, .social-project a::after {
         background-color: var(--bgactive);
+    }
+
+    .box-connect a, .item-news-home, .social-regis ul li a {
+        transition: all .3s ease-in-out;
     }
     
 }
