--- a/styles/globals.css
+++ b/styles/globals.css
@@ -488,6 +488,16 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     transform: none
 }
 
+.search-error {
+    color: white;
+    margin-top: 4px;
+    font-size: 12px;
+}
+
+.search-error-content {
+    display: block;
+}
+
 .right-header-clone .hotline-contacts>span, .right-header-clone .search-top, .right-header-clone::after{
     display: none;
 }
@@ -2315,6 +2325,7 @@ img.trans-y {
     max-width: 1100px;
 }
 
+
 @media (orientation: landscape){
     .home-banner, .home-banner .banner {
         height: 100vh;
@@ -3131,6 +3142,20 @@ img.trans-y {
 
     .item-search .title-news h3, .item-search .title-search h3 {
         font-size: 17px;
+    }
+
+    .news-detail-page .slidebox-arrows{
+        display: none;
+    }
+
+    .news-detail-page .swiper-slide{
+        margin: 0 0 20px;
+    }
+
+    .news-detail-page .swiper-pagination-bullet{
+        width: 27px;
+        height: 27px;
+        font-size: 11px;
     }
     
 }
