--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,6 +139,19 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     display: block;
 }
 
+.markdown table {
+    border-collapse: collapse;
+    margin: 0 0 1.5rem;
+    padding: 0 3vw;
+}
+.markdown th, .markdown td {
+    padding: 6px 13px;
+    border: 1px solid black;
+}
+.markdown p {
+    line-height: 1.5;
+}
+
 /* Menu */
 
 .header {
@@ -1721,14 +1734,16 @@ img.trans-y {
     text-transform: uppercase;
 }
 
+.item-product-category::after,
 .collection-box::after {
     content: '';
     background: var(--bg-gradient);
-    transition: transform .3s ease-in-out;
     height: 100%;
     z-index: 1;
+    opacity: 1;
 }
 
+.item-product-category::after,
 .collection-box::after, .inside-text {
     position: absolute;
     width: 100%;
@@ -2046,7 +2061,8 @@ img.trans-y {
 }
 
 .news-detail-page .swiper-pagination::before{
-    content: "Trang:"
+    content: "Trang:";
+    font-size: 14px;
 }
 
 .news-detail-page .item-news{
@@ -2226,7 +2242,17 @@ img.trans-y {
     .box-connect a, .item-news-home, .social-regis ul li a {
         transition: all .3s ease-in-out;
     }
+
+    .item-product-category::after,
+    .collection-box::after{
+        transition: all .3s ease-in-out;
+    }
     
+    .item-product-category:hover::after,
+    .collection-box:hover::after{
+        opacity: 0;
+        transition: all .3s ease-in-out;
+    } 
 }
 
 .share-item ul {
@@ -3457,7 +3483,6 @@ img.trans-y {
     }
 
     .collection-box::after {
-        transform: translateY(0);
         height: 100%;
         background: var(--color-black40);
     }
