--- a/styles/globals.css
+++ b/styles/globals.css
@@ -152,6 +152,20 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     line-height: 1.5;
 }
 
+.selected {
+    position: relative;
+}
+
+.selected::after{
+    content: "";
+    position: absolute;
+    right: 0;
+    background: url(../public/down-arrow-svgrepo-com.svg) no-repeat center center / contain;
+    width: 13px;
+    height: 13px;
+    top: 40%;
+}
+
 /* Menu */
 
 .header {
@@ -2387,6 +2401,12 @@ img.trans-y {
     max-width: 1100px;
 }
 
+.products-detail-page .product-information span{
+    padding: 12px 20px;
+    border: 1px solid var(--bgactive);  
+    font-size: 13px;
+    color: var(--bgactive);
+}
 
 @media (orientation: landscape){
     .home-banner, .home-banner .banner {
@@ -2857,10 +2877,13 @@ img.trans-y {
         border-radius: 0 10px 10px 0;
         padding: 5px
     }
-
+    
+    .title-span,
     .title-page h1 {
         font-size: 6vw
     }
+
+    
 
     .home-banner {
         height: auto
@@ -3416,7 +3439,7 @@ img.trans-y {
     }
 
     .feature-new .title-post h2{
-        font-size: 25px;
+        font-size: 28px;
     }
 
     .feateured-item .pic-news{
@@ -3704,8 +3727,17 @@ img.trans-y {
         font-size: 5rem;
     }
 
+    .title-span,
     .title-page h1 {
-        font-size: 25px;
+        font-size: 29px;
+    }
+
+    .selected::after{
+        right: 5px;
+    }
+
+    .feature-new .title-post{
+        margin: 0 0 35px;
     }
 
 }
