update homepage brand slide

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1800,7 +1800,7 @@ img.trans-y {
 .home-partner .bg-cover img{
     width: auto;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center center;
 }
 
