--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2227,8 +2227,55 @@ img.trans-y {
 
 /* Contact Page End */
 
+.social.show {
+    right: 0;
+}
+
+.social {
+    position: fixed;
+    width: auto;
+    top: calc(50% - 80px);
+    right: -100px;
+    transition: right .6s ease-in-out;
+    z-index: 5;
+}
+
+.social ul {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+    padding: 12px 7px 12px 11px;
+    border-radius: 15px 0 0 15px;
+    background-color: var(--bgactive30);
+}
+
+.social:not(.alway).black ul {
+    background-color: unset;
+    backdrop-filter: blur(5px);
+    border: 1px solid var(--bgactive50);
+}
+
+
+.social li {
+    position: relative;
+    display: inline-block;
+    margin: 2px 0;
+}
+
+.social li svg {
+    left: 10%;
+    top: 10%;
+    z-index: -1;
+}
+
 @media (hover: hover) and (pointer: fine) and (min-width: 1100px){
     
+    .social ul {
+        transition: background-color .3s ease-in-out;
+    }
+
     .download-pdf-subscribe, .input-but button, .print-box>button, .share-item a, .view-album, .view-album::after, .view-album::before, .view-degree, .view-degree::after, .view-pdf, .view-pdf::after, .view-pdf::before, .view-video, .view-video::after, .view-video::before {
         transition: all .3s ease-in-out;
     }
@@ -2649,6 +2696,13 @@ img.trans-y {
         --wrapsmall: 90vw;
         --widthmenu: 100vw;
         --padding-page: 40px 0
+    }
+
+    .social {
+        display: none;
+        transition: none;
+        opacity: 0;
+        pointer-events: none;
     }
 
     .header.black .logo img,
