--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2455,6 +2455,32 @@ img.trans-y {
     color: var(--bgactive);
 }
 
+.products-detail-page .product-gallery .swiper-button{
+    position: absolute;
+    top: calc(50% - 20px);
+    width: 40px;
+    height: 40px;
+    z-index: 1;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
+    transition: all 300ms ease;
+    cursor: pointer;
+}
+
+.products-detail-page .product-gallery .swiper-button.swiper-prev{
+    left: 10px
+}
+
+.products-detail-page .product-gallery .swiper-button.swiper-next{
+    right: 10px;
+}
+
+.products-detail-page .swiper-button-prev:after,
+.products-detail-page .swiper-button-next:after{
+    font-size: 15px !important;
+}
+
 @media (orientation: landscape){
     .home-banner, .home-banner .banner {
         height: 100vh;
@@ -2523,6 +2549,67 @@ img.trans-y {
         transition: color .3s ease-in-out;
     }
 }
+
+.products-detail-page .product-gallery,
+.products-detail-page .product-info{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .products-detail-page .product-gallery{
+        flex: 0 0 45%;
+        max-width: 45%;
+        padding: 24px;
+    }
+
+    .products-detail-page .product-info{
+        -ms-flex: 0 0 55%;
+        flex: 0 0 55%;
+        max-width: 55%;
+        padding: 24px;
+        border-left: 1px solid #ECECEC;
+    }
+}
+
+@media screen and (min-width: 950px) {
+    .products-detail-page .product-gallery{
+        flex: 0 0 45%;
+        max-width: 45%;
+        padding: 24px; 
+    }
+
+    .products-detail-page .product-info{
+        -ms-flex: 0 0 55%;
+        flex: 0 0 55%;
+        max-width: 55%;
+        padding: 24px;
+        border-left: 1px solid #ECECEC;
+    }
+
+    .products-detail-page .product-gallery .product-gallery--thumb {
+        margin-top: 16px;
+        width: 100%;
+    }
+
+    .products-detail-page .product-gallery--thumb .product-thumb{
+        border-radius: 4px;
+        border: 1px solid transparent;
+        transition: border-color 300ms ease;
+        overflow: hidden;
+        cursor: pointer;
+        display: -webkit-flex;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .products-detail-page .product-gallery--thumb .product-thumb--link{
+        width: 100%;
+    }
+}
+
 
 @media screen and (min-width: 1100px){
 
@@ -2666,8 +2753,45 @@ img.trans-y {
         z-index: 10;
     }
 
+    .products-detail-page .product-gallery{
+        flex: 0 0 35%;
+        max-width: 35%; 
+    }
+
+    .products-detail-page .product-info{
+        flex: 0 0 65%;
+        max-width: 65%;
+    }
+
     
 }
+
+.products-detail-page .product-gallery--slide {
+    width: 100%;
+}
+
+.products-detail-page .lazy-img--prod {
+    padding-bottom: 100%;
+}
+
+.products-detail-page .product-gallery .boxlazy-img--aspect{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.products-detail-page .product-gallery--photo img {
+    border-radius: 4px;
+    width: 100%;
+}
+
+
+
 
 @media screen and (max-width: 1500px) {
     @media screen and (min-width: 1100px) {
@@ -3315,6 +3439,10 @@ img.trans-y {
     .products-detail-page .slidebox-arrows,
     .news-detail-page .slidebox-arrows{
         display: none;
+    }
+
+    .products-detail-page .product-gallery {
+        padding: 5px 5px;
     }
 }
 
