--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1697,10 +1697,26 @@ div,p,span {
 
 .collection-box{
     position: relative;
-    width: calc(50% - 120px);
-    margin: 60px;
+    width: calc(50% - 160px);
+    margin: 80px 80px 0 80px;
     cursor: pointer;
 }
+
+.collection-box:nth-child(odd){
+    margin-left: 90px;
+    margin-right: 0;
+}
+
+.collection-box:nth-child(even){
+    margin-right: 90px;
+    margin-left: 0;
+}
+
+.collection-box.even:nth-last-child(2),
+.collection-box.even:last-child,
+.collection-box.odd:last-child{
+    margin-bottom: 80px;
+} 
 
 .pic-collection {
     width: 100%;
@@ -3151,7 +3167,6 @@ img.trans-y {
 
     .home-intro {
         padding: var(--padding-page);
-        padding-bottom: 30vw;
     }
 
     .pic-home-intro {
@@ -3261,7 +3276,7 @@ img.trans-y {
     }
 
     .inside-text h2 {
-        font-size: 5vw;
+        font-size: 26px;
         font-weight: 400;
     }
 
@@ -3460,6 +3475,15 @@ img.trans-y {
 
     .products-detail-page .product-gallery {
         padding: 5px 5px;
+    }
+
+    .collection-box{
+        width: calc(50% - 120px);
+        margin: 60px 60px 0 60px;
+    }
+
+    .collection-box:nth-child(odd){
+        margin-right: 60px;
     }
 }
 
@@ -3744,13 +3768,18 @@ img.trans-y {
         width: 100%;
         margin: 0 0 16px;
     }
+    .collection-box:nth-child(even),
+    .collection-box:nth-child(odd){
+        margin-right: 0;
+        margin-left: 0;
+    }
 
     .pic-collection {
         height: max(calc(1125 / 2000* 100vw), 350px);
     }
 
     .inside-text h2 {
-        font-size: 10vw;
+        font-size: 32px;
     }
 
     .collection-box::after {
