--- a/styles/globals.css
+++ b/styles/globals.css
@@ -958,6 +958,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
 .box-footer .company-text span {
     width: 32px;
     height: 32px;
+    
+}
+
+.box-footer .company-address{
+    font-size: 20px;
 }
 
 .company-text span {
@@ -982,8 +987,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
 .box-footer .company-text a {
     width: calc(100% - 2.8rem);
     padding-left: .5rem;
-    font-size: 2.2em;
-    font-weight: 100;
+    font-size: 20px;
+    font-weight: 400;
 }
 
 .company-text a, .company-text p {
@@ -1327,6 +1332,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     color: inherit;
     line-height: 1;
     text-transform: uppercase;
+}
+
+.text-title-about{
+    font-size: 41px;
 }
 
 .box-txt, .box-txt p {
@@ -1759,14 +1768,10 @@ img.trans-y {
 
 
 .inside-text h2 {
-    font-size: 4rem;
+    font-size: 40px;
     font-weight: 400;
     color: var(--color-white);
     text-transform: uppercase;
-}
-
-.collection .inside-text h2{
-    font-size: 40px;
 }
 
 .item-product-category::after,
@@ -2466,11 +2471,6 @@ img.trans-y {
     object-fit: cover;
 }
 
-.product-cat-page .item-product-category .pic-img img {
-    object-fit: contain;
-    padding: 30px;
-}
-
 .product-cat-page .item-product-category{
     width: calc((100% / 3) - 29px);
     margin: 14.5px;
@@ -2602,6 +2602,10 @@ img.trans-y {
         max-width: 55%;
         padding: 24px;
         border-left: 1px solid #ECECEC;
+    }
+
+    .box-footer .company-address{
+        font-size: 16px;
     }
 }
 
@@ -2872,6 +2876,10 @@ img.trans-y {
 
     .wheel {
         display: none
+    }
+
+    .box-footer .company-text a{
+        word-wrap: break-word;
     }
 
     .detail-scroll,.fixed-scrol,.main,.scroll-content,.smooth-scroll {
@@ -3457,7 +3465,10 @@ img.trans-y {
         height: 27px;
         font-size: 11px;
     }
-    
+
+    .collection-box {
+        width: calc(50% - 120px);
+    }
 }
 
 @media only screen and (max-width: 1100px) and (orientation: portrait) {
@@ -3478,12 +3489,16 @@ img.trans-y {
     }
 
     .collection-box{
-        width: calc(50% - 120px);
+        width: calc(50% - 90px);
         margin: 60px 60px 0 60px;
     }
 
     .collection-box:nth-child(odd){
-        margin-right: 60px;
+        margin-left: 75px;
+    }
+
+    .collection-box:nth-child(even){
+        margin-right: 75px;
     }
 }
 
@@ -3616,6 +3631,11 @@ img.trans-y {
         margin-top: 15px;
     }
 
+    .box-footer .company-address,
+    .box-footer .company-text a {
+        font-size: 16px;
+    }
+
 
 }
 
@@ -3711,6 +3731,18 @@ img.trans-y {
         min-height: 100%;
     }
 
+    .collection-box{
+        width: calc(50% - 70px);
+    }
+
+    .collection-box:nth-child(odd){
+        margin-left: 60px;
+    }
+
+    .collection-box:nth-child(even){
+        margin-right: 60px;
+    }
+
 }
 
 
@@ -3749,6 +3781,8 @@ img.trans-y {
     transition-timing-function: linear;
     margin: 0 auto;
 }
+
+
 
 @media screen and (max-width:580px) {
 
