--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1745,7 +1745,7 @@ img.trans-y {
     height: 100%;
     top: 0;
     left: 0;
-    object-fit: cover;
+    object-fit: fill;
     object-position: center center;
     pointer-events: none;
 }
