--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,6 +139,23 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     display: block;
 }
 
+.markdown h1{
+    font-size: 56px;
+}
+
+.markdown h2{
+    font-size: 40px;
+}
+
+.markdown h3{
+    font-size: 31px;
+}
+
+.markdown h4{
+    font-size: 26px;
+}
+
+
 .markdown table {
     border-collapse: collapse;
     margin: 0 0 1.5rem;
