display list style type

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,6 +139,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav{
     display: block;
 }
 
+.markdown > * {
+    all: revert;
+  }
+
 .markdown h1{
     font-size: 56px;
 }
