--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1731,7 +1731,7 @@ div,p,span {
 
 .collection-box{
     position: relative;
-    width: calc(50% - 160px);
+    width: calc(50% - 135px);
     margin: 80px 80px 0 80px;
     cursor: pointer;
 }
@@ -3526,6 +3526,7 @@ img.trans-y {
 
     .collection-box {
         width: calc(50% - 120px);
+        margin: 70px 70px 0;
     }
 }
 
@@ -3548,7 +3549,7 @@ img.trans-y {
 
     .collection-box{
         width: calc(50% - 90px);
-        margin: 60px 60px 0 60px;
+        margin: 35px 60px 0 60px;
     }
 
     .collection-box:nth-child(odd){
